[cleanup] Remove deprecated user of Integer constructor
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>